fix some layout issues

--- a/assets/scss/pages/_store-page.scss
+++ b/assets/scss/pages/_store-page.scss
@@ -1,4 +1,4 @@
-.stores-location {
+.store-page {
     h1 {
         border-left: 8px solid $color-primary;
         font: normal normal bold 48px/72px $font-family-primary;
@@ -13,7 +13,8 @@
             line-height: 36px;
         }
     }
-    .area-selector {
+    .store-selector {
+        margin-bottom: 24px;
         label {
             font: normal normal normal 24px/36px $font-family-primary;
         }
@@ -25,8 +26,7 @@
         }
     }
     @media(max-width: 768px) {
-        .area-selector {
-            margin-bottom: 24px;
+        .store-selector {
             div {
                 gap: 8px;
             }
@@ -58,10 +58,13 @@
                 color: $color-3;
             }
         }
-        .more-details {
-            background-color: $color-3;
-            font: normal normal normal 19px/27px $font-family-primary;
-            color: $color-secondary;
+        .item-map {
+            div {
+                height: 414px;
+                background: url(../../assets/images/map.png) no-repeat;
+                background-position: center;
+                background-size: cover;
+            }
         }
     }
     @media(max-width: 992px) {
@@ -70,7 +73,27 @@
         }
         .item {
             margin-bottom: 24px;
-            width: 50%;
+            width: 100%;
+            display: flex;
+            img {
+                width: 50%;
+                padding-right: 12px;
+            }
+            .text-content {
+                width: 50%;
+                padding-left: 12px;
+            }
+        }
+        .grid {
+            .item-map {
+                width: 100%;
+                margin-bottom: 24px;
+                div {
+                    background: url(../../assets/images/map.png) no-repeat;
+                    background-position: center;
+                    background-size: cover;
+                }
+            }
         }
     }
     @media(max-width: 768px) {
@@ -79,10 +102,19 @@
         }
         .item {
             width: 100%;
+            flex-direction: column;
             h2, .font {
                 white-space: nowrap;
                 overflow: hidden;
                 text-overflow: ellipsis;
+            }
+            img {
+                width: 100%;
+                padding-right: 0px;
+            }
+            .text-content {
+                width: 100%;
+                padding-left: 0px;
             }
         }
     }
